content/core/1.2.0/reference/vendr-core-web-cache/umbracoappcache.md
---
title: UmbracoAppCache
description: API reference for UmbracoAppCache in Vendr, the eCommerce solution for Umbraco v8+
---
## UmbracoAppCache

```csharp
public class UmbracoAppCache : ICache
```

**Inheritance**

* interface [ICache](../../vendr-core-cache/icache/)

**Namespace**
* [Vendr.Core.Web.Cache](../)

### Constructors

#### UmbracoAppCache

```csharp
public UmbracoAppCache(IAppPolicyCache appCache)
```


### Methods

#### ClearAll

```csharp
public void ClearAll()
```


---

#### ClearByKey

```csharp
public void ClearByKey(string cacheKeyStartsWith)
```


---

#### Get (1 of 2)

```csharp
public object Get(string cacheKey)
```

---

#### Get (2 of 2)

```csharp
public object Get(string cacheKey, Func<object> factory)
```


---

#### GetTyped&lt;T&gt; (1 of 2)

```csharp
public T GetTyped<T>(string cacheKey)
```

---

#### GetTyped&lt;T&gt; (2 of 2)

```csharp
public T GetTyped<T>(string cacheKey, Func<T> factory)
```


---

#### Set (1 of 2)

```csharp
public void Set(string cacheKey, object cacheValue)
```

---

#### Set (2 of 2)

```csharp
public void Set(string cacheKey, object cacheValue, TimeSpan cacheDuration)
```


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Core.Web.dll -->
